<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">手机小工具(cslilong@gmail.com)</string>
    <string name="app_name">手机小工具</string>
    
    <string name="getipbtn">连接</string>
    <string name="sendbtn">关机</string>
    
    
    <string name="initBtn">选中PPT</string>
    <string name="firstBtn">第一页</string>
    <string name="lastBtn">最后一页</string>
    <string name="prevBtn">上一页</string>
    <string name="nextBtn">下一页</string>
</resources>
